IaCaKs/tf/deploymentSamples/faas.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello
  namespace: faas
  annotations:
    networking.knative.dev/http-protocol: "redirected"
    features.knative.dev/http-full-duplex: "Enabled" # Test with your http clients before enabling, as older clients may not provide support for HTTP/1 full duplex.
spec:
  template:
    spec:
      containers:
        - image: demoacr.azurecr.io/func:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
          env:
            - name: TARGET
              value: "World"
      imagePullSecrets:
        - name: acr-secret
