IaCaKs/tf/deploymentSamples/ingressNginxDeployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: demo
    istio-injection: enabled
  name: demo
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingressgateway-nginx
  namespace: kitn-dev
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - 'nginx.k8sdemocluster.com'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-cert-nginx # This should match the Certificate secretName
      hosts:
        - 'nginx.k8sdemocluster.com' # This should match a DNS name in the Certificate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/name: "nginxLabel"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/instance: "nginxLabel-dev"
  name: nginx-deployment
  namespace: kitn-dev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/version: "0.0.1"
      app.kubernetes.io/name: "nginxLabel"
      app.kubernetes.io/component: "frontend"
      app.kubernetes.io/instance: "nginxLabel-dev"
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "0.0.1"
        app.kubernetes.io/name: "nginxLabel"
        app.kubernetes.io/component: "frontend"
        app.kubernetes.io/instance: "nginxLabel-dev"
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
        runAsNonRoot: true
      restartPolicy: Always
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:alpine
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: 20Mi
              cpu: 200m
            requests:
              cpu: 100m
              memory: 10Mi
          ports:
            - containerPort: 8080
              name: nginx-web-port
          livenessProbe:
            httpGet:
              path: /
              port: nginx-web-port
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/name: "nginxLabel"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/instance: "nginxLabel-dev"
  name: nginx-service
  namespace: kitn-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: nginx-web-port
  selector:
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/name: "nginxLabel"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/instance: "nginxLabel-dev"
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-ingress
  namespace: kitn-dev
  labels:
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/name: "nginxLabel"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/instance: "nginxLabel-dev"
spec:
  hosts:
    - 'nginx.k8sdemocluster.com'
  gateways:
    - kitn-dev/istio-ingressgateway-nginx
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            host: 'nginx-service.kitn-dev.svc.cluster.local'
            port:
              number: 80
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: peer-authentication-kitn-chat
  namespace: kitn-dev
spec:
  mtls:
    mode: PERMISSIVE
