IaCaKs/tf/deploymentSamples/kitnChat.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingressgateway-chat
  namespace: kitn-dev
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - 'dev-chat.k8sdemocluster.com'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-cert-chat # This should match the Certificate secretName
      hosts:
        - 'dev-chat.k8sdemocluster.com' # This should match a DNS name in the Certificate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitn-chat
  namespace: kitn-dev
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: ""
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: kitn-chat
          image: devkitnregistry.azurecr.io/kitn-cd:09-23-15-2024-10-03
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: kitn-chat
  namespace: kitn-dev
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: chat
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kitn-chat-ingress
  namespace: kitn-dev
spec:
  hosts:
    - 'dev-chat.k8sdemocluster.com'
  gateways:
    - kitn-dev/istio-ingressgateway-chat
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            host: 'kitn-chat.kitn-dev.svc.cluster.local'
            port:
              number: 80
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: peer-authentication-kitn-chat
  namespace: kitn-dev
spec:
  mtls:
    mode: PERMISSIVE
