IaCaKs/tf/deploymentSamples/kitnDoc.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingressgateway-doc
  namespace: kitn
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - 'dev-doc.k8sdemocluster.com'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-cert-doc # This should match the Certificate secretName
      hosts:
        - 'dev-doc.k8sdemocluster.com' # This should match a DNS name in the Certificate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitn-doc
  namespace: kitn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc
  template:
    metadata:
      labels:
        app: doc
    spec:
      containers:
        - name: kitn-doc
          image: devkitnregistry.azurecr.io/kitn-doc:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: kitn-doc
  namespace: kitn
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: doc
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kitn-doc-ingress
  namespace: kitn
spec:
  hosts:
    - 'dev-doc.k8sdemocluster.com'
  gateways:
    - kitn/istio-ingressgateway-doc
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            host: 'kitn-doc.kitn.svc.cluster.local'
            port:
              number: 80
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: peer-authentication-kitn-chat
  namespace: kitn
spec:
  mtls:
    mode: PERMISSIVE
