IaCaKs/tf/deploymentSamples/kitnSharePoint.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingressgateway-sp
  namespace: kitn
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - 'dev-sp.k8sdemocluster.com'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-cert-sp # This should match the Certificate secretName
      hosts:
        - 'dev-sp.k8sdemocluster.com' # This should match a DNS name in the Certificate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitn-sp
  namespace: kitn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sp
  template:
    metadata:
      labels:
        app: sp
    spec:
      containers:
        - name: kitn-sp
          image: devkitnregistry.azurecr.io/kitn-sp:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: kitn-sp
  namespace: kitn
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: sp
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kitn-sp-ingress
  namespace: kitn
spec:
  hosts:
    - 'dev-sp.k8sdemocluster.com'
  gateways:
    - kitn/istio-ingressgateway-sp
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            host: 'kitn-sp.kitn.svc.cluster.local'
            port:
              number: 80
